# portable-notebook

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  offline-marimo-player-spec.md
.github/workflows/: ci.yml  pages.yml  release.yml
app/: README.md  sync-frontend.sh  welcome.html
app/placeholder-dist/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  resolver.rs
experiments/offline-folder/: README.md  capture.mjs  csp-server.py  external-sha256.txt  external-urls.txt  inject.py  notebook-cowsay.mnote  notebook-egress.mnote  notebook.py  notebook2.mnote  package-lock.json  package.json  pkg-probe.mjs  vendor.sh
site/: Carrel-test.mnote  index.html
tools/: mnote-pack.py
