[package]
name = "mnote-player"
version = "0.1.0"
description = "Offline marimo notebook player (.mnote)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
percent-encoding = "2"
url = "2"
zip = "2"
