[package]
name = "mnote-player"
version = "0.1.0"
description = "Offline marimo notebook player (.mnote)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
percent-encoding = "2"
url = "2"
zip = "2"
sha2 = "0.10"
getrandom = "0.2"
ureq = { version = "2", features = ["json"] }
tauri-plugin-dialog = "2"

# Windows/Linux only: forward a double-clicked file from a 2nd launch to the
# running instance. macOS is single-instance and uses RunEvent::Opened instead.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
